Fixed a configuration bug with Java 11 sources leaking into Java 8 artifacts.